[gd_scene load_steps=10 format=3 uid="uid://rrq63x5hqfh7"]

[ext_resource type="Script" path="res://overworld/city/buildings/house.gd" id="1_28t5d"]
[ext_resource type="PackedScene" uid="uid://cd8tkx0y8ylm6" path="res://character/character.tscn" id="2_6nt6q"]
[ext_resource type="Texture2D" uid="uid://byjy6lrmb0l3e" path="res://assets/TinySwords/Factions/Knights/Troops/Warrior/Blue/Warrior_Blue.png" id="3_1dd26"]
[ext_resource type="Texture2D" uid="uid://b7qfr1sp7fbv5" path="res://assets/TinySwords/Factions/Knights/Buildings/House/House_Blue.png" id="3_vqx0t"]
[ext_resource type="Texture2D" uid="uid://cr8hup84bpppq" path="res://assets/TinySwords/Factions/Knights/Troops/Archer/Archer + Bow/Archer_Blue_(NoArms).png" id="4_str6s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1xd35"]
size = Vector2(84, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_ga46a"]
atlas = ExtResource("3_1dd26")
region = Rect2(48.9999, 37.433, 101, 104)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pgir"]
atlas = ExtResource("4_str6s")
region = Rect2(50.9999, 43, 85, 106)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bixnt"]
bg_color = Color(0.666667, 0, 0.278431, 1)

[node name="character_hub" type="StaticBody2D"]
collision_layer = 32
collision_mask = 25
input_pickable = true
script = ExtResource("1_28t5d")
knight_scene = ExtResource("2_6nt6q")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_vqx0t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 9)
shape = SubResource("RectangleShape2D_1xd35")

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(0, 106)

[node name="ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = -413.0
offset_right = -75.0
offset_bottom = -413.0
grow_horizontal = 2
size_flags_horizontal = 4

[node name="PanelContainer" type="PanelContainer" parent="ui"]
layout_mode = 0
offset_left = -1.0
offset_top = 11.0
offset_right = 150.0
offset_bottom = 313.0

[node name="VBoxContainer" type="VBoxContainer" parent="ui/PanelContainer"]
layout_mode = 2

[node name="knight_button" type="Button" parent="ui/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"ButtonBig"
icon = SubResource("AtlasTexture_ga46a")

[node name="archer_button" type="Button" parent="ui/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"ButtonBig"
icon = SubResource("AtlasTexture_2pgir")
icon_alignment = 1

[node name="health_bar" type="ProgressBar" parent="."]
offset_left = -61.0
offset_top = -96.0
offset_right = 62.0
offset_bottom = -69.0
theme_override_styles/fill = SubResource("StyleBoxFlat_bixnt")
max_value = 1.0
value = 1.0

[connection signal="input_event" from="." to="." method="on_input_event"]
[connection signal="pressed" from="ui/PanelContainer/VBoxContainer/knight_button" to="." method="on_knight_button_pressed"]
